--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,12 +6,14 @@
 trigger:
 - main
 - build
+- build_and_deploy
 
 pool: myAgentPool
 variables:
   azureServiceConnectionId: 'myServiceConnection'
   webAppName: 'mywebapp242519'
   projectRoot: $(System.DefaultWorkingDirectory)
+  environmentName: 'msdocs_sample_app'
 
 stages:
 - stage: Build
@@ -38,3 +40,23 @@ stages:
     - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
       displayName: 'Step - Upload package'
       artifact: drop
+
+- stage: Deploy
+  displayName: 'Deploy Web App'
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: DeploymentJob
+    pool: myAgentPool
+    environment: $(environmentName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: AzureWebApp@1
+            displayName: 'Deploy Azure Web App : '
+            inputs:
+              azureSubscription: $(azureServiceConnectionId)
+              appName: $(webAppName)
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              appType: webApp
