--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,12 +7,33 @@ trigger:
 - main
 
 pool: myAgentPool
+variables:
+  azureServiceConnectionId: 'myServiceConnection'
+  webAppName: 'mywebapp242933'
+  projectRoot: $(System.DefaultWorkingDirectory)
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: Build
+  displayName: Build stage
+  jobs:
+  - job: BuildJob
+    pool: myAgentPool
+    steps:
+    - script: |
+        export PATH=$HOME/.local/bin:$PATH
+        python3.9 -m pip install -r requirements.txt
+      workingDirectory: $(projectRoot)
+      displayName: 'Step - Install requirements.txt'
+      
+    - task: ArchiveFiles@2
+      displayName: 'Step - Archive files'
+      inputs:
+        rootFolderOrFile: '$(projectRoot)'
+        includeRootFolder: false
+        archiveType: zip
+        archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+        replaceExistingArchive: true
+    
+    - upload: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
+      displayName: 'Step - Upload package'
+      artifact: drop
