--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ variables:
   azureServiceConnectionId: 'myServiceConnection'
   webAppName: 'mywebapp242933'
   projectRoot: $(System.DefaultWorkingDirectory)
+  environmentName: 'msdocs_sample_app'
 
 stages:
 - stage: Build
@@ -28,7 +29,7 @@ stages:
     - task: ArchiveFiles@2
       displayName: 'Step - Archive files'
       inputs:
-        rootFolderOrFile: '$(Build.BinariesDirectory)'
+        rootFolderOrFile: '$(projectRoot)'
         includeRootFolder: false
         archiveType: zip
         archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
